@@ -29,7 +29,7 @@
             this.compiler.CompileMethod(method);
             this.writer.Close();
             string output = this.writer.ToString();
-            Assert.IsTrue(ContainsLine(output, "function $with_with(a, b)"));
+            Assert.IsTrue(ContainsLine(output, "function $with_with_(a, b)"));
             Assert.IsTrue(ContainsLine(output, "{"));
             Assert.IsTrue(ContainsLine(output, "return a + b;"));
             Assert.IsTrue(ContainsLine(output, "}"));
@@ -42,10 +42,80 @@
             this.compiler.CompileMethod(method);
             this.writer.Close();
             string output = this.writer.ToString();
-            Assert.IsTrue(ContainsLine(output, "function $with_with(a, b)"));
+            Assert.IsTrue(ContainsLine(output, "function $with_with_(a, b)"));
             Assert.IsTrue(ContainsLine(output, "{"));
             Assert.IsTrue(ContainsLine(output, "a = b;"));
             Assert.IsTrue(ContainsLine(output, "}"));
+        }
+
+        [TestMethod]
+        public void CompileSimpleClassWithInstanceVariables()
+        {
+            ClassModel @class = new ClassModel("AClass", null, new List<string>() { "x", "y" }, new List<string>());
+            this.compiler.CompileClass(@class);
+            this.writer.Close();
+            string output = this.writer.ToString();
+            Assert.IsTrue(ContainsLine(output, "function AClass()"));
+            Assert.IsTrue(ContainsLine(output, "{"));
+            Assert.IsTrue(ContainsLine(output, "}"));
+            Assert.IsTrue(ContainsLine(output, "AClass.prototype.x = null;"));
+            Assert.IsTrue(ContainsLine(output, "AClass.prototype.y = null;"));
+        }
+
+        [TestMethod]
+        public void CompileSimpleClassWithClassVariables()
+        {
+            ClassModel @class = new ClassModel("AClass", null, new List<string>(), new List<string>() { "x", "y" });
+            this.compiler.CompileClass(@class);
+            this.writer.Close();
+            string output = this.writer.ToString();
+            Assert.IsTrue(ContainsLine(output, "function AClass()"));
+            Assert.IsTrue(ContainsLine(output, "{"));
+            Assert.IsTrue(ContainsLine(output, "}"));
+            Assert.IsTrue(ContainsLine(output, "AClass.x = null;"));
+            Assert.IsTrue(ContainsLine(output, "AClass.y = null;"));
+        }
+
+        [TestMethod]
+        public void CompileSimpleClassWithSimpleMethod()
+        {
+            ClassModel @class = new ClassModel("AClass", null, new List<string>() { "x", "y" }, new List<string>());
+            ModelParser parser = new ModelParser("x ^x");
+            MethodModel method = parser.ParseMethod(@class, false);
+            @class.InstanceMethods.Add(method);
+            this.compiler.CompileClass(@class);
+            this.writer.Close();
+            string output = this.writer.ToString();
+            Assert.IsTrue(ContainsLine(output, "function AClass()"));
+            Assert.IsTrue(ContainsLine(output, "{"));
+            Assert.IsTrue(ContainsLine(output, "}"));
+            Assert.IsTrue(ContainsLine(output, "AClass.prototype.x = null;"));
+            Assert.IsTrue(ContainsLine(output, "AClass.prototype.y = null;"));
+            Assert.IsTrue(ContainsLine(output, "AClass.prototype.$x = function()"));
+            Assert.IsTrue(ContainsLine(output, "{"));
+            Assert.IsTrue(ContainsLine(output, "return this.x;"));
+            Assert.IsTrue(ContainsLine(output, "};"));
+        }
+
+        [TestMethod]
+        public void CompileSimpleClassWithSimpleSetMethod()
+        {
+            ClassModel @class = new ClassModel("AClass", null, new List<string>() { "x", "y" }, new List<string>());
+            ModelParser parser = new ModelParser("x: newX x := newX");
+            MethodModel method = parser.ParseMethod(@class, false);
+            @class.InstanceMethods.Add(method);
+            this.compiler.CompileClass(@class);
+            this.writer.Close();
+            string output = this.writer.ToString();
+            Assert.IsTrue(ContainsLine(output, "function AClass()"));
+            Assert.IsTrue(ContainsLine(output, "{"));
+            Assert.IsTrue(ContainsLine(output, "}"));
+            Assert.IsTrue(ContainsLine(output, "AClass.prototype.x = null;"));
+            Assert.IsTrue(ContainsLine(output, "AClass.prototype.y = null;"));
+            Assert.IsTrue(ContainsLine(output, "AClass.prototype.$x_ = function(newX)"));
+            Assert.IsTrue(ContainsLine(output, "{"));
+            Assert.IsTrue(ContainsLine(output, "this.x = newX;"));
+            Assert.IsTrue(ContainsLine(output, "};"));
         }
 
         private static MethodModel ParseMethod(string text)
