@@ -243,6 +243,10 @@ IVisitor, IVisitable in MethodModel, IExpression, expressions
 ICompiler, AbstractCompiler
 Compilers/Javascript/Compiler with first tests
 
+2011-09-24
+ClassModel, in MethodModel and ModelParser, and compile support with tests
+ClassVariableExpression, InstanceVariableExpression, with ModelParser support and tests
+
 Angel "Java" Lopez
 http://www.ajlopez.com/en
 http://ajlopez.wordpress.com/
